# rs-step-merger

./: Cargo.toml  LICENSE.md  README.md  run_neo4j.sh
.github/workflows/: rust.yml
doc/: step-spec.md
step-export-neo4j/: Cargo.toml
step-export-neo4j/src/: main.rs  neo4j_export.rs  options.rs
step-merger/: Cargo.toml
step-merger-cli/: Cargo.toml  build.rs
step-merger-cli/src/: main.rs  options.rs
step-merger/benches/: lexer.rs  reader.rs  ref_iter.rs
step-merger/src/: assembly.rs  error.rs  lib.rs
step-merger/src/merge/: buffered_iterator.rs  mod.rs  root_nodes.rs  utils.rs
step-merger/src/step/: lexer.rs  lexer_chumsky.rs  lexer_logos.rs  merger.rs  mod.rs  reader.rs  ref_iter.rs  writer.rs
step-merger/src/step/parser/: char_parser.rs  mod.rs  parser.rs  whitespace_parser.rs
step-merger/src/step/reader/: char_reader.rs  mod.rs  parser.rs  tokenizer.rs
step-merger/src/step/reader/logos_parser/: buffered_reader.rs  lexer_logos.rs  mod.rs  stream_lexer.rs
step-merger/src/step/reader/plain_parser/: mod.rs  tokenizer.rs
step-merger/tests/: parser_test.rs
test_data/: 1.stp  2-cubes-1-sphere.stp  2.stp  assembly.json  bloodhound.json  cube-and-sphere.json  cube-and-sphere.stp  cube-sphere.stp  minimal-structure-with-metadata.stp  minimal-structure-with-speres-and-cube.stp  minimal-structure-with-spheres.stp  minimal-structure.stp  one-cube-and-one-error.json  one-cube.json  sphere.stp  two-cubes-same-label.stp  two-cubes.json  two-cubes.stp  wiki-normalized.stp
