[package]
name = "step-export-neo4j"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
step-merger = { path = "../step-merger" }
log = "0.4"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
chrono = "0.4"
neo4rs = "0.7"
tokio = { version = "1", features = ["full"] }
