[package]
name = "step-merger-cli"
version = "0.1.0"
edition = "2021"
authors = ["Sascha Raesch <sascha.raesch@threedy.io"]
description = "CLI for merging STEP files into a single file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
step-merger = { path = "../step-merger" }
log = "0.4"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
chrono = "0.4"
