[package]
name = "step-merger"
version = "0.2.0"
authors = ["Sascha Raesch <sascha.raesch@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0.60"
chumsky = "1.0.0-alpha.7"
logos = "0.14.0"
circular = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "lexer"
harness = false
